Done Product flow from repository to controller